# pkg/zero/cluster/models.gen.go
@@ -3,6 +3,10 @@
 // Code generated by github.com/deepmap/oapi-codegen/v2 version v2.1.0 DO NOT EDIT.
 package cluster
 
+import (
+	"time"
+)
+
 const (
 	BearerAuthScopes = "bearerAuth.Scopes"
 )
@@ -92,6 +96,19 @@ type GetBundlesResponse struct {
 	Bundles []Bundle `json:"bundles"`
 }
 
+// ReportUsageRequest defines model for ReportUsageRequest.
+type ReportUsageRequest struct {
+	Users []ReportUsageUser `json:"users"`
+}
+
+// ReportUsageUser defines model for ReportUsageUser.
+type ReportUsageUser struct {
+	AccessedAt  time.Time `json:"accessedAt"`
+	DisplayName string    `json:"displayName"`
+	Email       string    `json:"email"`
+	Id          string    `json:"id"`
+}
+
 // BundleId defines model for bundleId.
 type BundleId = string
 
@@ -100,3 +117,6 @@ type ReportClusterResourceBundleStatusJSONRequestBody = BundleStatus
 
 // ExchangeClusterIdentityTokenJSONRequestBody defines body for ExchangeClusterIdentityToken for application/json ContentType.
 type ExchangeClusterIdentityTokenJSONRequestBody = ExchangeTokenRequest
+
+// ReportUsageJSONRequestBody defines body for ReportUsage for application/json ContentType.
+type ReportUsageJSONRequestBody = ReportUsageRequest
